# electro

./: .gitignore  .npmrc  package.json  pnpm-lock.yaml  tsconfig.json
crates/: .gitignore  Cargo.toml
crates/src/: lib.rs
crates/src/locales/: en.rs  fa.rs  mod.rs
crates/src/locales/first_name/: en.rs  fa.rs  mod.rs
crates/src/locales/last_name/: en.rs  fa.rs  mod.rs
crates/src/locales/word/: mod.rs
crates/src/locales/word/en/: mod.rs  nouns.rs
crates/src/locales/word/fa/: nouns.rs
scripts/: pack.ts  template.ts  wasm.ts
src/: conf.ts  extensions.ts  main.ts
