[package]
name = "crates"
version = "0.1.0"
authors = ["alirezahematidev <alirezahematideveloper71@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook","wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = {version = "0.4.5",optional = true}
fake = { version = "2.9.2", features = ["derive"] }
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
